Updated the version.md